@@ -1,7 +1,7 @@
 1..4935
 # Running under perl version 5.010000 for linux
-# Current time local: Sat Oct 18 20:30:37 2008
-# Current time GMT:   Sat Oct 18 11:30:37 2008
+# Current time local: Sun Oct 19 13:35:59 2008
+# Current time GMT:   Sun Oct 19 04:35:59 2008
 # Using Test.pm version 1.25
 # t/xml/elements-1.dat
 ok 1
@@ -1047,13 +1047,13 @@ ok 1026
 ok 1027
 ok 1028
 ok 1029
-# t/xml/notations-1.dat
 ok 1030
 ok 1031
 ok 1032
 ok 1033
 ok 1034
 ok 1035
+# t/xml/notations-1.dat
 ok 1036
 ok 1037
 ok 1038
@@ -1112,3 +1112,15 @@ ok 1090
 ok 1091
 ok 1092
 ok 1093
+ok 1094
+ok 1095
+ok 1096
+ok 1097
+ok 1098
+ok 1099
+ok 1100
+ok 1101
+ok 1102
+ok 1103
+ok 1104
+ok 1105
