@@ -1,3 +1,8 @@
+2008-10-19  Wakaba  <wakaba@suika.fam.cx>
+
+	* notations-1.dat, notations-1.dat: Tests on lowercase markup
+	declaration keywords are added.
+
 2008-10-18  Wakaba  <wakaba@suika.fam.cx>
 
 	* attlists-1.dat: A test result updated.
