@@ -1,3 +1,8 @@
+2008-10-19  Wakaba  <wakaba@suika.fam.cx>
+
+	* Tokenizer.pm.src (_get_next_token): Make keywords 'ENTITY',
+	'ELEMENT', 'ATTLIST', and 'NOTATION' ASCII case-insensitive.
+
 2008-10-18  Wakaba  <wakaba@suika.fam.cx>
 
 	* Tokenizer.pm.src: Modifies PUBLIC/SYSTEM identifier tokenizer
